--- a/login.yml
+++ b/login.yml
@@ -1,4 +1,4 @@
-name: pro
+name: login
 
 on:
   push:
@@ -21,5 +21,5 @@ jobs:
           distribution: 'temurin'
 
       - name: Build and Test with Maven
-        working-directory: pro
+        working-directory: login
         run: mvn clean install
