--- a/login.yml
+++ b/login.yml
@@ -1,7 +1,7 @@
-name: login
+name: pro
 
 on:
-  push:
+  push: 
     branches: ["main"]
   pull_request:
     branches: ["main"]
@@ -21,5 +21,5 @@ jobs:
           distribution: 'temurin'
 
       - name: Build and Test with Maven
-        working-directory: login
+        working-directory: pro
         run: mvn clean install
