--- a/login.yml
+++ b/login.yml
@@ -1,12 +1,12 @@
 name: pro
 
 on:
-  push: 
+  push:
     branches: ["main"]
-  pull_request:
+  pull_request:  
     branches: ["main"]
-
-jobs:
+ 
+jobs:            
   build:
     runs-on: windows-latest
 
@@ -17,9 +17,13 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: '17'   
           distribution: 'temurin'
 
-      - name: Build and Test with Maven
+      - name: Build with Maven
         working-directory: pro
         run: mvn clean install
+
+      - name: Run Tests
+        working-directory: pro
+        run: mvn test is there any changes
