--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,28 +2,26 @@ name: pro
 
 on:
   push:
-    branches: ["main"]
-  pull_request:  
-    branches: ["main"]
- 
-jobs:            
+    branches: [main]
+  pull_request:
+    branches: [main]
+
+jobs:
   build:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout source  
+      - name: Checkout source
         uses: actions/checkout@v3
 
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
-          java-version: '17'   
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Build with Maven
-        working-directory: pro
         run: mvn clean install
 
       - name: Run Tests
-        working-directory: pro
-        run: mvn test is there any changes
+        run: mvn test
