--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: pro
+name: loginproject
 
 on:
   push:
@@ -11,7 +11,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout source 
+      - name: Checkout source
         uses: actions/checkout@v3
 
       - name: Set up Java
@@ -21,9 +21,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Maven
-        working-directory: pro
         run: mvn clean install
 
       - name: Run Tests
-        working-directory: pro
         run: mvn test
