--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,17 @@
-name: loginproject
+name: pro
 
 on:
   push:
     branches: ["main"]
-  pull_request:
-    branches: ["main"] 
+  pull_request:  
+    branches: ["main"]
 
-jobs:
+jobs:            
   build:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout source
+      - name: Checkout source  
         uses: actions/checkout@v3
 
       - name: Set up Java
@@ -21,7 +21,9 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Maven
+        working-directory: pro
         run: mvn clean install
 
       - name: Run Tests
+        working-directory: pro
         run: mvn test
