--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: pro
+name: Spring Boot CI
 
 on:
   push:
@@ -14,16 +14,13 @@ jobs:
       - name: Checkout source  
         uses: actions/checkout@v3
 
-      - name: Set up Java
+      - name: Set up JDK 24
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: '24'
           distribution: 'temurin'
 
-      - name: Build with Maven
-        working-directory: pro
-        run: mvn clean install
+      - name: Build project with Maven
+        run: mvn clean install -DskipTests
 
-      - name: Run Tests
-        working-directory: pro
-        run: mvn test
+      
